--- a/sentry.properties
+++ b/sentry.properties
@@ -1,4 +1,9 @@
+# defaults.url=https://sentry.io/
+# defaults.org=trafath-communication
+# defaults.project=nextjs
+# cli.executable=..\\..\\Users\\Sadeeq\\AppData\\Roaming\\npm-cache\\_npx\\8412\\node_modules\\@sentry\\wizard\\node_modules\\@sentry\\cli\\bin\\sentry-cli
+
 defaults.url=https://sentry.io/
-defaults.org=trafath-communication
-defaults.project=nextjs
-cli.executable=..\\..\\Users\\Sadeeq\\AppData\\Roaming\\npm-cache\\_npx\\8412\\node_modules\\@sentry\\wizard\\node_modules\\@sentry\\cli\\bin\\sentry-cli
+defaults.org=dataex
+defaults.project=javascript-nextjs
+# cli.executable=../path/to/bin/sentry-cli
